syntax = "proto3";

package messages;

enum ReplyCode {
    OK = 0;
    NOK = 1;
}